# nyoom

./: .gitignore  CMakeLists.txt  README.md
JUCE/: CHANGE_LIST.md  CMakeLists.txt
JUCE/examples/DemoRunner/: CMakeLists.txt  DemoRunner.jucer
JUCE/examples/Plugins/: AudioPluginDemo.h
JUCE/extras/Projucer/: Projucer.jucer
JUCE/modules/juce_analytics/: juce_analytics.h
JUCE/modules/juce_animation/: juce_animation.h
JUCE/modules/juce_audio_basics/: juce_audio_basics.h
JUCE/modules/juce_audio_devices/: juce_audio_devices.h
JUCE/modules/juce_audio_formats/: juce_audio_formats.h
JUCE/modules/juce_audio_plugin_client/: juce_audio_plugin_client.h  juce_audio_plugin_client_AAX.cpp  juce_audio_plugin_client_AU_1.mm  juce_audio_plugin_client_AUv3.mm  juce_audio_plugin_client_VST2.cpp  juce_audio_plugin_client_VST3.cpp
JUCE/modules/juce_audio_processors/: juce_audio_processors.cpp  juce_audio_processors.h
JUCE/modules/juce_audio_utils/: juce_audio_utils.h
JUCE/modules/juce_box2d/: juce_box2d.h
JUCE/modules/juce_core/: juce_core.h
JUCE/modules/juce_cryptography/: juce_cryptography.h
JUCE/modules/juce_data_structures/: juce_data_structures.h
JUCE/modules/juce_dsp/: juce_dsp.h
JUCE/modules/juce_events/: juce_events.h
JUCE/modules/juce_graphics/: juce_graphics.h  juce_graphics_Harfbuzz.cpp
JUCE/modules/juce_gui_basics/: juce_gui_basics.h
src/: CMakeLists.txt  Delay.cpp  Delay.h  Doppler.cpp  Doppler.h  Effect.cpp  Effect.h  Interpolation.cpp  Interpolation.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
(+88 files in other folders)
